kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-ha-elixir
  labels:
    istio-injection: enabled
