kubernetes/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ai-ha-elixir-gateway
  namespace: ai-ha-elixir
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - $INGRESS_HOST
