kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ha-elixir
  namespace: ai-ha-elixir
  # annotations:
  #   # WebSocket support for LiveView
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
  #   nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
  #   nginx.ingress.kubernetes.io/configuration-snippet: |
  #     proxy_set_header Upgrade $http_upgrade;
  #     proxy_set_header Connection "upgrade";
  #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
  #     proxy_set_header X-Forwarded-Proto $scheme;
  #     proxy_set_header X-Forwarded-Host $host;
spec:
  ingressClassName: nginx
  rules:
    - host: ai-ha.alexmickelson.guru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-ha-elixir
                port:
                  number: 80
