kubernetes/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ai-ha-elixir-vs
  namespace: ai-ha-elixir
spec:
  hosts:
    - $INGRESS_HOST
  gateways:
    - ai-ha-elixir-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ai-ha-elixir
            port:
              number: 80
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "gateway-error,connect-failure,retriable-4xx"
      timeout: 15s
